# ezcord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.forgejo/workflows/: build_image.yaml
ezcord-derive/: Cargo.toml
ezcord-derive/src/: lib.rs
src/: actions.rs  config.rs  main.rs  parser.rs  sema.rs
src/parser/: error.rs  expr.rs  stmt.rs  strings.rs  tests.rs
src/sema/: decl.rs  expr.rs  stmt.rs  types.rs
