[package]
name = "ezcord"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = [
	"rt",
	"rt-multi-thread",
	"signal",
	"macros",
] }
serenity = "0.12.4"
serde = "1.0.219"
nom = "8.0.0"
nom-language = "0.1.0"

version = { path = "version" }

[lints.clippy]
needless_return = "allow"